# crossword-near

./: .gitignore  package-lock.json  package.json
contract/: Cargo.toml  build.sh  command.sh  guess.sh
contract/src/: lib.rs
www/: package-lock.json  package.json
www/src/: App.tsx  main.tsx
www/src/lib/: utils.ts
